traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:6: error: not found: value x
    x=x+1;
    ^